Fix scrolling of API docs on small screens
fixes #49

--- a/docs/_sass/_react_docs_nav.scss
+++ b/docs/_sass/_react_docs_nav.scss
@@ -59,6 +59,7 @@ nav.toc {
 
     .navGroups {
       padding: 40px 10px 10px;
+      display: none;
     }
   }
 
